; ModuleID = '/home/carl/AnghaBench/libgit2/tests/fetchhead/extr_nonetwork.c_find_master_haacked.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/fetchhead/extr_nonetwork.c_find_master_haacked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@find_master_haacked_called = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"refs/heads/master\00", align 1
@found_master = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"refs/heads/haacked\00", align 1
@found_haacked = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @find_master_haacked(i8* %0, i8* %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = call i32 @GIT_UNUSED(i8* %11)
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @GIT_UNUSED(i8* %13)
  %15 = load i8*, i8** %10, align 8
  %16 = call i32 @GIT_UNUSED(i8* %15)
  store i32 1, i32* @find_master_haacked_called, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @strcmp(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %5
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @cl_assert(i32 %21)
  store i32 1, i32* @found_master, align 4
  br label %23

23:                                               ; preds = %20, %5
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @strcmp(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %30, label %27

27:                                               ; preds = %23
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @cl_assert(i32 %28)
  store i32 1, i32* @found_haacked, align 4
  br label %30

30:                                               ; preds = %27, %23
  ret i32 0
}

declare dso_local i32 @GIT_UNUSED(i8*) #1

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @cl_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
